--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,39 @@
-/*# sourceMappingURL=main.css.map */
+body {
+  background-color: rgb(11, 188, 17);
+}
+
+section {
+  width: 650px;
+  margin: 0 auto;
+  padding: 25px 35px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  border-radius: 50px;
+  background-color: rgb(208, 94, 56);
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.687);
+}
+
+.mole-hole {
+  width: 120px;
+  height: 100px;
+  margin: 10px 10px;
+  background-color: rgba(140, 53, 18, 0.502);
+  border-radius: 50% 50%;
+  background-image: url(/assets/images/hole.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.mole__button {
+  border-radius: 43% 43% 43% 43%;
+  width: 110px;
+  height: 65px;
+  position: absolute;
+  top: 17px;
+  background: url(/assets/images/mole.svg);
+  background-repeat: no-repeat;
+  background-size: 100px;
+  left: 5px;
+}/*# sourceMappingURL=main.css.map */
